# remote-rgb-lights

./: .gitignore  .nvim_config.lua  CMakeLists.txt  README.md  Store.h  test
rgb-lights/: LedPatterns.cpp  LedPatterns.h  rgb-lights.ino  url-parser.cpp  url-parser.h
rgb-lights/patterns/: _juggle.h  bpm.h  colorFade.h  colorWipe.h  confetti.h  cyclon.h  immediateColor.h  ledStripCycle.h  pacifica.h  pride.h  rainbowCycle.h  simpleRainbow.h  sinePulse.h  twinkleFox.h
src/: arduinoSketch.ino
src/include/led-patterns/: LedPatterns.h
src/include/led-patterns/patterns/: colorWipe.h  confetti.h  fire.h  pulse.h  rainbowCycle.h  sinePulse.h
src/led-patterns/: Pattern.h
src/led-patterns/patterns/: bpm.h  cyclon.h  immediateColor.h  pacifica.h  pride.h  simpleRainbow.h  twinkleFox.h
testbuild/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  patterns_test  patterns_test[1]_include.cmake  patterns_test[1]_tests.cmake
tests/: CMakeLists.txt  mock.cpp  mock.h  patterns_test.cpp  url-parser.cpp
webapp/: bun.lockb  index.html  package.json
webapp/src/: devices.js  index.css  render.js
